// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`report snapshots > matches structured snapshot for a hardened express fixture 1`] = `
{
  "criticalCount": 0,
  "findings": [
    {
      "id": "auth.core",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "authz.resource-level",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "billing.webhook-signature",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "deployment.readiness",
      "severity": "low",
      "status": "partial",
    },
    {
      "id": "docker.presence",
      "severity": "low",
      "status": "missing",
    },
    {
      "id": "env.example",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "expectation.audit.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.api-keys.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.email-verification.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.mfa.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.password-reset.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.authz.ownership.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.billing.model.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.deployment.required",
      "severity": "medium",
      "status": "partial",
    },
    {
      "id": "expectation.docker.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.consent.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.erasure.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.export.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.retention.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.observability.logging.recommended",
      "severity": "low",
      "status": "partial",
    },
    {
      "id": "expectation.tenancy.isolation.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.tenancy.organization.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.uploads.required",
      "severity": "medium",
      "status": "partial",
    },
    {
      "id": "gdpr.privacy",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "observability.health",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "observability.logging",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "security.cors-origin",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "security.django-debug",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "security.django-secure-cookies",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "security.helmet",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "security.rate-limit-auth",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "security.weak-secret",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "stack.detected",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "tenancy.b2b",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "uploads.public-exposure",
      "severity": "info",
      "status": "passed",
    },
  ],
  "highCount": 6,
  "maturity": "partial",
  "mediumCount": 11,
  "score": 75,
}
`;

exports[`report snapshots > matches structured snapshot for an unhardened express fixture 1`] = `
{
  "criticalCount": 2,
  "findings": [
    {
      "id": "auth.core",
      "severity": "medium",
      "status": "partial",
    },
    {
      "id": "authz.resource-level",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "billing.webhook-signature",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "deployment.readiness",
      "severity": "low",
      "status": "missing",
    },
    {
      "id": "docker.presence",
      "severity": "low",
      "status": "missing",
    },
    {
      "id": "env.example",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.audit.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.api-keys.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.email-verification.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.mfa.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.auth.password-reset.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.authz.ownership.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.authz.roles.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.billing.model.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.deployment.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.docker.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.consent.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.erasure.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.export.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.gdpr.retention.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.observability.health.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.observability.logging.recommended",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "expectation.security.cors.required",
      "severity": "medium",
      "status": "partial",
    },
    {
      "id": "expectation.security.headers.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.security.rate-limit.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.tenancy.isolation.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.tenancy.organization.required",
      "severity": "high",
      "status": "missing",
    },
    {
      "id": "expectation.uploads.required",
      "severity": "critical",
      "status": "missing",
    },
    {
      "id": "expectation.uploads.required",
      "severity": "critical",
      "status": "missing",
    },
    {
      "id": "gdpr.privacy",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "observability.health",
      "severity": "low",
      "status": "missing",
    },
    {
      "id": "observability.logging",
      "severity": "low",
      "status": "missing",
    },
    {
      "id": "security.cors-origin",
      "severity": "high",
      "status": "partial",
    },
    {
      "id": "security.django-debug",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "security.django-secure-cookies",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "security.helmet",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "security.rate-limit-auth",
      "severity": "medium",
      "status": "missing",
    },
    {
      "id": "security.weak-secret",
      "severity": "critical",
      "status": "missing",
    },
    {
      "id": "security.weak-secret",
      "severity": "critical",
      "status": "missing",
    },
    {
      "id": "stack.detected",
      "severity": "info",
      "status": "passed",
    },
    {
      "id": "tenancy.b2b",
      "severity": "info",
      "status": "unknown",
    },
    {
      "id": "uploads.public-exposure",
      "severity": "high",
      "status": "missing",
    },
  ],
  "highCount": 13,
  "maturity": "prototype",
  "mediumCount": 16,
  "score": 31,
}
`;
